kubernetes/apps/whoami/manifest/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    istio-injection: enabled
