kubernetes/apps/whoami/manifest/templates/traefik-middleware-oauth2.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-errors
  namespace: whoami
spec:
  errors:
    status:
      - "401"
    query: "/oauth2/sign_in"
    service:
      name: whoami-oauth2-proxy
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-auth
  namespace: whoami
spec:
  forwardAuth:
    address: http://whoami-oauth2-proxy.whoami.svc.cluster.local/oauth2/
    trustForwardHeader: true
    authResponseHeaders:
      - "X-Auth-Request-User"
      - "X-Auth-Request-Email"
      - "Authorization"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-chain
  namespace: whoami
spec:
  chain:
    middlewares:
#      - name: oauth2-errors
      - name: oauth2-auth
