kubernetes/apps/whoami/manifest/templates/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-custom-header
  namespace: whoami
spec:
  headers:
    customResponseHeaders:
      X-My-Custom-Header: "Hello from Traefik!"
