kubernetes/apps/whoami/manifest/templates/gateway-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: whoami-gateway-2
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  # gatewayClassName defines which gateway controller to use
  # For Istio, this should be "istio"
  gatewayClassName: istio

  listeners:
    - name: http-whoami-2
      port: 443
      protocol: HTTPS
      hostname: "whoami.istio-2.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: whoami-tls-2  # cert-manager creates this automatically
      allowedRoutes:
        namespaces:
          from: Same  # Allow routes from same namespace (whoami)
          # Use "from: All" to allow routes from any namespace
