kubernetes/apps/whoami/manifest/templates/gateway-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: whoami-gateway-istio
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  # Selector defines which Istio ingress gateway pods to use
  selector:
    istio: istio  # Default Istio ingress gateway selector
  
  servers:
    - port:
        number: 443
        name: http-whoami
        protocol: HTTPS
      hosts:
        - "whoami.gw.yuriy-lab.cloud"
      tls:
        mode: SIMPLE                # or MUTUAL if using client certs
        credentialName: whoami-cert # Kubernetes secret containing TLS certs
