kubernetes/apps/whoami/manifest/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: whoami-gateway
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  # gatewayClassName defines which gateway controller to use
  # For Istio, this should be "istio"
  gatewayClassName: istio

  listeners:
    - name: http-whoami
      port: 443
      protocol: HTTPS
      hostname: "whoami.istio.yuriy-lab.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - name: whoami-tls  # cert-manager creates this automatically
      allowedRoutes:
        namespaces:
          from: Same  # Allow routes from same namespace (whoami)
          # Use "from: All" to allow routes from any namespace
