kubernetes/apps/whoami/manifest/templates/istio_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: whoami-gateway
  namespace: whoami
spec:
  selector:
    istio: istio
  servers:
    - port:
        number: 443
        name: https-whoami
        protocol: HTTPS
      hosts:
        - whoami.istio.yuriy-lab.cloud
      tls:
#        mode: SIMPLE
#        credentialName: my-default-tls-secret
        mode: PASSTHROUGH
