kubernetes/apps/whoami/manifest/templates/http-route.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: whoami-vs
  namespace: whoami
spec:
  hosts:
    - whoami.istio.yuriy-lab.cloud
  gateways:
    - whoami-gateway
  http:
    - match:
        - uri:
            prefix: "/"  # same as your Ingress path
      route:
        - destination:
            host: whoami
            port:
              number: 80
