kubernetes/apps/whoami/manifest/templates/ingress-traefik-open.yaml
# test example -> curl -v https://whoami.yuriy-lab.cloud --resolve whoami.yuriy-lab.cloud:443:192.168.0.XXX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-oauth2-open-ingress
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - oauth2.yuriy-lab.cloud
    secretName: oauth-traefik-lab-tls
  rules:
    - host: oauth2.yuriy-lab.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-oauth2-proxy
                port:
                  number: 80
