kubernetes/apps/whoami/manifest/templates/ingress-traefik.yaml
# test example -> curl -v https://whoami.yuriy-lab.cloud --resolve whoami.yuriy-lab.cloud:443:192.168.0.XXX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-traekif-ingress
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: whoami-oauth2-chain@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - whoami.traefik.yuriy-lab.cloud
    secretName: whoami-traefik-lab-tls
  rules:
    - host: whoami.traefik.yuriy-lab.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
