kubernetes/apps/whoami/manifest/templates/ingress.yaml
# test example -> curl -v https://whoami.yuriy-lab.cloud --resolve whoami.yuriy-lab.cloud:443:192.168.0.XXX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tls
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/auth-url: http://whoami-oauth2-proxy.whoami.svc.cluster.local/oauth2/auth?allowed_groups=4cc0e15c-4414-4aa8-b34e-7b20a29cf5751
    nginx.ingress.kubernetes.io/auth-signin: "https://whoami.yuriy-lab.cloud/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-Email, X-Auth-Request-Groups"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /oauth2/ {
        proxy_pass http://whoami-oauth2-proxy.whoami.svc.cluster.local;
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Scheme $scheme;
        proxy_set_header X-Auth-Request-Redirect $request_uri;
      }
spec:
  ingressClassName: nginx # This specifies that NGINX should handle the Ingress
  tls:
  - hosts:
    - whoami.yuriy-lab.cloud
    secretName: whoami-lab-tls
  rules:
    - host: whoami.yuriy-lab.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
