kubernetes/apps/whoami/manifest/templates/ingress2.yaml
# test example -> curl -v https://whoami.yuriy-lab.cloud --resolve whoami.yuriy-lab.cloud:443:192.168.0.XXX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tls
  namespace: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx # This specifies that NGINX should handle the Ingress
  tls:
  - hosts:
    - whoami.yuriy-lab.cloud
    secretName: whoami-lab-tls
  rules:
    - host: whoami.yuriy-lab.cloud
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                namespace: oauth2-proxy
                port:
                  number: 80
